[FIX] fix css menu overflow, check if module is menu and with css='y' [FIX] style/coelesce.css to import layout/layout.css [ENH] layout.css with .cssmenubox to show the menu in css mode With these modifications no needs to use overflow='y' for menu...
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@19208 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -2012,6 +2012,12 @@ div#ajaxLoading {
  
 .tab-menu li.tab-selected a {background: #f8f8ff}
 
+/* CSS Menu */
+
+div.cssmenubox {
+  overflow: visible !important;
+}
+
 /***** New (unsorted) *****/
 
 /* webmail & groupmail */
